Исключены плагины eclipse и idea