@@ -27,75 +27,14 @@ To reformat changed lines in a specific patch, use
 formatting. This is a deliberate design decision to unify our code formatting on
 a single format.*
 
-### IntelliJ, Android Studio, and other JetBrains IDEs
-
-A
-[google-java-format IntelliJ plugin](https://plugins.jetbrains.com/plugin/8527)
-is available from the plugin repository. To install it, go to your IDE's
-settings and select the `Plugins` category. Click the `Marketplace` tab, search
-for the `google-java-format` plugin, and click the `Install` button.
-
-The plugin will be disabled by default. To enable,
-[open the Project settings](https://www.jetbrains.com/help/idea/configure-project-settings.html),
-then click "google-java-format Settings" and check the "Enable
-google-java-format" checkbox.
-
-To enable it by default in new projects,
-[open the default settings for new projects](https://www.jetbrains.com/help/idea/configure-project-settings.html#new-default-settings)
-and configure it under "Other Settings/google-java-format Settings".
-
-When enabled, it will replace the normal `Reformat Code` and `Optimize Imports`
-actions.
-
-#### IntelliJ JRE Config
-
-The google-java-format plugin uses some internal classes that aren't available
-without extra configuration. To use the plugin, you need to
-[add some options to your IDE's Java runtime](https://www.jetbrains.com/help/idea/tuning-the-ide.html#procedure-jvm-options).
-To do that, go to `Help→Edit Custom VM Options...` and paste in these lines:
-
-```
---add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
---add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
---add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
---add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
---add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
---add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
-```
-
-Once you've done that, restart the IDE.
-
-### Eclipse
-
-The latest version of the `google-java-format` Eclipse plugin can be downloaded
-from the [releases page](https://github.com/google/google-java-format/releases).
-Drop it into the Eclipse
-[drop-ins folder](http://help.eclipse.org/neon/index.jsp?topic=%2Forg.eclipse.platform.doc.isv%2Freference%2Fmisc%2Fp2_dropins_format.html)
-to activate the plugin.
-
-The plugin adds a `google-java-format` formatter implementation that can be
-configured in `Window > Preferences > Java > Code Style > Formatter > Formatter
-Implementation`.
-
 ### Third-party integrations
 
-*   Visual Studio Code
-    *   [google-java-format-for-vs-code](https://marketplace.visualstudio.com/items?itemName=JoseVSeb.google-java-format-for-vs-code)
-*   Gradle plugins
-    *   [spotless](https://github.com/diffplug/spotless/tree/main/plugin-gradle#google-java-format)
-    *   [sherter/google-java-format-gradle-plugin](https://github.com/sherter/google-java-format-gradle-plugin)
-*   Apache Maven plugins
-    *   [spotless](https://github.com/diffplug/spotless/tree/main/plugin-maven#google-java-format)
-    *   [spotify/fmt-maven-plugin](https://github.com/spotify/fmt-maven-plugin)
-    *   [talios/googleformatter-maven-plugin](https://github.com/talios/googleformatter-maven-plugin)
-    *   [Cosium/maven-git-code-format](https://github.com/Cosium/maven-git-code-format):
-        A maven plugin that automatically deploys google-java-format as a
-        pre-commit git hook.
-*   SBT plugins
-    *   [sbt/sbt-java-formatter](https://github.com/sbt/sbt-java-formatter)
-*   [Github Actions](https://github.com/features/actions)
-    *   [googlejavaformat-action](https://github.com/axel-op/googlejavaformat-action):
-        Automatically format your Java files when you push on github
+* IntelliJ, Android Studio, and other JetBrains IDEs
+
+  TBD
+* Apache Maven plugins
+
+  TBD
 
 ### as a library
 
